feat(course): enable daily schedules and student assignment UI (#12)
* feat(backend:domain-course): add course module

Introduce Course entity CRUD (service, controller, DTOs, repository/test coverage), seed data, and domain plan/TODO updates. Includes validation, authorization checks, and AGENT log.

* feat(frontend:course): add course management ui

Implement teacher course dashboard with modal form, hooks, shared components, plan/TODO/log updates, and OpenAPI sync.

* feat(student-management): add course assignment toggles