@@ -8,6 +8,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 import com.classhub.domain.course.model.Course;
+import com.classhub.domain.course.model.CourseSchedule;
 import com.classhub.domain.course.repository.CourseRepository;
 import com.classhub.domain.member.dto.MemberPrincipal;
 import com.classhub.domain.member.model.Member;
@@ -24,7 +25,8 @@ import com.classhub.domain.studentprofile.repository.StudentProfileRepository;
 import java.time.DayOfWeek;
 import java.time.LocalDate;
 import java.time.LocalTime;
-import java.util.Set;
+import java.util.Arrays;
+import java.util.HashSet;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -117,9 +119,10 @@ class PersonalLessonControllerTest {
                         .teacherId(teacher.getId())
                         .name("Test Course")
                         .company("Test Company")
-                        .startTime(LocalTime.now())
-                        .endTime(LocalTime.now())
-                        .daysOfWeek(Set.of(DayOfWeek.MONDAY, DayOfWeek.FRIDAY))
+                        .schedules(new HashSet<>(Arrays.asList(
+                                new CourseSchedule(DayOfWeek.MONDAY, LocalTime.of(14, 0), LocalTime.of(16, 0)),
+                                new CourseSchedule(DayOfWeek.FRIDAY, LocalTime.of(14, 0), LocalTime.of(16, 0))
+                        )))
                         .build()
         );
         studentProfile = studentProfileService.createProfile(
